# swell-wiki

./: .gitignore  PLAN.md  README.md  claude_desktop.json
api/: requirements.txt
api/db/: growth_cloud.py
api/routes/: briefings.py
api/schemas/: aid.py
api/services/: aid_extractor.py  briefings.py  fathom_ingest.py  state_compiler.py
cloud/.llmwiki/: index.db
examples/: sample_aid.json  sample_fathom_transcript.json
growth-cloud/: .env.example  .gitignore  Makefile  README.md  growth-cloud  pyproject.toml
growth-cloud/examples/target-darts/clients/target-darts/calls/: 2025-04-12-paid-search-review-dach.md
growth-cloud/examples/target-darts/wiki/clients/target-darts/: overview.md
growth-cloud/ingest/: config.py  fathom.py  prompts.py  runner.py  writer.py
growth-cloud/mcp_tools/: aid_store.py  guide.py  tools.py
growth-cloud/recompile/: worker.py
growth-cloud/schema/: aid.py
growth-cloud/server/: cli.py  main.py
growth-cloud/tests/: conftest.py  smoke.py  test_ingest.py  test_mcp_handlers.py  test_recompile.py  test_router.py  test_runner.py
growth-cloud/tests/fixtures/fathom/: list.json
growth-cloud/tests/fixtures/fathom/calls/: call-001.json  call-002.json
mcp/tools/: briefing.py
plans/: 2026-05-15-growth-cloud-bootstrap-v1.md
prompts/: aid_extraction.md  briefings.md
shared/: growth_cloud_schema.sql
web/src/app/(dashboard)/wikis/[slug]/briefings/: page.tsx
web/src/components/briefings/: BriefingCard.tsx  Citation.tsx
web/src/lib/: briefings.ts
