[project]
name = "swell-growth-cloud"
version = "0.0.1"
description = "Growth Cloud — Fathom → AID → compounded wiki layer, built on llmwiki."
requires-python = ">=3.11"
dependencies = [
    # Direct deps
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    # MCP — pinned to match llmwiki's ceiling (llmwiki/mcp/requirements.txt:1)
    "mcp[cli]>=1.27.0,<2",
    # Transitive runtime deps pulled in by `from tools import register` in
    # server/main.py:74. Declared explicitly so `pip install -e .` succeeds
    # standalone, not just when llmwiki is already installed.
    "pydantic-settings>=2.14.0",  # llmwiki/mcp/config.py:3
    "aiosqlite>=0.22.1",          # llmwiki/mcp/vaultfs/sqlite.py
    "asyncpg>=0.31.0",            # llmwiki/mcp/vaultfs/__init__.py imports postgres backend unconditionally
    "pyjwt[crypto]>=2.12.1",      # llmwiki MCP auth
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[project.scripts]
growth-cloud = "server.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["schema*", "ingest*", "recompile*", "mcp_tools*", "server*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
